# ComfiUIWrapper

./: .gitignore  BUILD_PROMPT.md  README.md  pyproject.toml  spec.md
.github/: copilot-instructions.md
.github/instructions/: capability.instructions.md  docs.instructions.md  human-docs-ProjectInvocationGuide.instructions.md
.github/instructions/general-shared-for-all-projects/: architect-plan.instructions.md  docs.instructions.md  markdown.instructions.md
.github/skills/add-capability/: SKILL.md
.github/skills/add-capability/references/: templates.md
agent-memory/: ProjectSpec.md  STRUCTURE.md  adding-a-capability.md
human-docs/: FirstUseAndHowToRunExplanation.md  HighLevelArchitecture.md  Implementation.md  ProjectInvocationGuide.md  skill-invocation.md  validation.md
output/architect/: ComfiUIWrapper-plan.md  ComfiUIWrapper-spec.md
scripts/: capture_template.py
src/comfywrap/: __init__.py
src/comfywrap/capabilities/: __init__.py
src/comfywrap/capabilities/video/: __init__.py
src/comfywrap/capabilities/video/image_to_video/: __init__.py  adapter.py  binding.py  schema.py
src/comfywrap/capabilities/video/text_to_video/: __init__.py  adapter.py  binding.py  schema.py
src/comfywrap/core/: __init__.py  cli.py  config.py  doctor.py  driver.py  errors.py  injection.py  output.py  registry.py
src/comfywrap/data/workflows/: ltx2_i2v.api.json
tests/: test_cli.py  test_driver.py  test_errors.py  test_image_to_video.py  test_injection.py  test_integration.py  test_output.py  test_schema.py
workflows/: ltx2_t2v.api.json
